// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should check jankiness 1`] = `
Object {
  "loaderId": "1cfbee70-f4a3-11e9-9108-e7aacbba72d3",
  "score": 0.8813205294283949,
  "timestamp": 1571731701463,
  "type": "scroll",
  "url": "https://www.saucedemo.com/",
  "value": Object {
    "diagnostics": Object {
      "fpsScore": 1,
      "idleDurationScore": 0.9674039580908033,
      "layoutUpdateScore": 1,
      "memoryUsageScore": 0.9936344788683276,
    },
    "metrics": Object {
      "averageFPS": 62.637486770808955,
      "forcedReflowWarningCounts": 0,
      "idleTime": 4986,
      "memoryUsageDiff": 10027708,
      "otherTime": 168,
      "paintingTime": 3,
      "renderingTime": -1,
      "scriptingTime": -2,
      "scrollTime": 5154,
    },
  },
}
`;

exports[`should check jankiness 2`] = `
Object {
  "result": "pass",
}
`;

exports[`should fail if captured values are out of budget 1`] = `
Object {
  "details": Object {
    "load": Object {
      "actual": 1837,
      "lowerLimit": 0,
      "upperLimit": 1000,
    },
    "speedIndex": Object {
      "actual": 1143,
      "lowerLimit": 500,
      "upperLimit": 1000,
    },
  },
  "result": "failed",
}
`;

exports[`should fail if jankiness score is out of budget 1`] = `
Object {
  "loaderId": "1cfbee70-f4a3-11e9-9108-e7aacbba72d3",
  "score": 0.8813205294283949,
  "timestamp": 1571731701463,
  "type": "scroll",
  "url": "https://www.saucedemo.com/",
  "value": Object {
    "diagnostics": Object {
      "fpsScore": 1,
      "idleDurationScore": 0.9674039580908033,
      "layoutUpdateScore": 1,
      "memoryUsageScore": 0.9936344788683276,
    },
    "metrics": Object {
      "averageFPS": 62.637486770808955,
      "forcedReflowWarningCounts": 0,
      "idleTime": 4986,
      "memoryUsageDiff": 10027708,
      "otherTime": 168,
      "paintingTime": 3,
      "renderingTime": -1,
      "scriptingTime": -2,
      "scrollTime": 5154,
    },
  },
}
`;

exports[`should fail if jankiness score is out of budget 2`] = `
Object {
  "details": Object {
    "jankiness": Object {
      "actual": 88,
      "lowerLimit": 90,
      "upperLimit": 100,
    },
  },
  "result": "failed",
}
`;

exports[`should include header when using sauce rest API 1`] = `
Object {
  "User-Agent": "Speedo/1.2.4 (nodejs darwin)",
}
`;

exports[`should pass if captured values are within budget 1`] = `
Object {
  "result": "pass",
}
`;

exports[`should run successfully 1`] = `
Array [
  Array [],
  Array [
    "Run performance test...",
  ],
  Array [
    "Wait for job to finish...",
  ],
  Array [
    "Download performance logs...",
  ],
  Array [
    "Updating job status...",
  ],
]
`;

exports[`should run successfully 2`] = `
Array [
  Array [
    Object {
      "symbol": "📃",
      "text": "Stored performance logs in /some/tmpDir",
    },
  ],
  Array [
    Object {
      "symbol": "⚙️ ",
      "text": "Runtime settings:
- Network Throttling: undefined
- CPU Throttling: undefinedx
- CPU/Memory Power: 1234 (undefined)
- User Agent: chrome
",
    },
  ],
  Array [
    Object {
      "symbol": "👀",
      "text": "Check out job at https://saucelabs.com/performance/foobar/0",
    },
  ],
  Array [
    Object {
      "symbol": "📔",
      "text": "Check out Lighthouse Report at https://api.us-west-1.saucelabs.com/v1/eds/foobar/performance/barfoo/lhr.html",
    },
  ],
]
`;

exports[`should store tracelogs if path provided 1`] = `
Array [
  Array [
    "foobar123",
    "_tracelog_10285BFC9E231DFB7E269641B3CC670.json.gz",
    "/foo/bar/trace.json",
  ],
]
`;
